--- a/Hello.html
+++ b/Hello.html
@@ -1,7 +1,7 @@
 <html>
 <body><center>
  <b>Hello World</b>
- <b>Edit 2</b>hawfhaogfuhaghfuawoifhj
+ <b>Edit 2</b>
  <b>Hi ulet</b>
  </center>
 </body>
