--- a/Hello.html
+++ b/Hello.html
@@ -1,9 +1,10 @@
 <html>
 <body><center>
+Hi
  <b>Hello World</b>
  <b>Edit 2</b>
  <b>Hi ulet</b>
- <b>Hi hooooo</b>
+Sanaol
  </center>
 </body>
 </html>
