--- a/Hello.html
+++ b/Hello.html
@@ -3,10 +3,9 @@
 Hi
  <b>Hello World</b>
  <b>Edit 2</b>
-Never gonna give you up
- Never gonna let you down
  <b>Hi ulet</b>
 Sanaol
+ sanaol because? -den
  </center>
 </body>
 </html>
