--- a/Hello.html
+++ b/Hello.html
@@ -7,6 +7,10 @@ Hi
  <b>Kenneth was here</b>
 Sanaol
  sanaol because? -den
+ Html mga hampaslupa
+ 
+ The jumping brown fox was a quick and lazy dog
  </center>
+
 </body>
 </html>
