Edit code directory

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>   
 <head>  
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="text/javascript" src="../js/loginLink.js"></script>
-<link rel="stylesheet" type="text/css" href="../css/style.css">
-<link rel="icon" href="../img/BUHS LOGO.png" type="image/png">  
+<script type="text/javascript" src="./js/loginLink.js"></script>
+<link rel="stylesheet" type="text/css" href="./css/style.css">
+<link rel="icon" href="./img/BUHS LOGO.png" type="image/png">  
 <title> BUCEILS Voting System </title>   
 </head>    
 <body>
@@ -12,9 +12,9 @@
         <div class="Awelcome-banner">
         <h2>ONLINE</h2>
         <div class="Alogo-container">
-        <img class="Alogos" src="../img/BU logo.png">
-        <img class="Alogos" src="../img/BUHS LOGO.png">
-        <img class="Alogos" src="../img/SSG LOGO.png">
+        <img class="Alogos" src="./img/BU logo.png">
+        <img class="Alogos" src="./img/BUHS LOGO.png">
+        <img class="Alogos" src="./img/SSG LOGO.png">
         </div>
         <h2>VOTING SYSTEM</h2>
         <p>BICOL UNIVERSITY COLLEGE OF EDUCATION<br>INTEGRATED LABORATORY SCHOOL HIGH SCHOOL DEPT.</p>
@@ -22,9 +22,9 @@
 
         <div class="Alogo-banner">
             <p class="Abanner-text">BUCEILS HS ONLINE VOTING SYSTEM</p>
-            <img class="Arlogo" src="../img/BU logo.png">
-            <img class="Arlogo" src="../img/BUHS LOGO.png">
-            <img class="Arlogo" src="../img/SSG LOGO.png">
+            <img class="Arlogo" src="./img/BU logo.png">
+            <img class="Arlogo" src="./img/BUHS LOGO.png">
+            <img class="Arlogo" src="./img/SSG LOGO.png">
         </div>
     <!-- end Login Banner --> 
      
