--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="text/javascript" src="./js/loginLink.js"></script>
 <link rel="stylesheet" type="text/css" href="./css/style.css">
-<link rel="icon" href="./img/BUHS LOGO.png" type="image/png">  
+<link rel="icon" href="img/BUHS LOGO.png" type="image/png">  
 <title> BUCEILS Voting System </title>   
 </head>    
 <body>
