--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="text/javascript" src="./js/loginLink.js"></script>
 <link rel="stylesheet" type="text/css" href="./css/style.css">
-<link rel="icon" href="img/BUHS LOGO.png" type="image/png">  
+<link rel="icon" href="./img/BUHS LOGO.png" type="image/png">  
 <title> BUCEILS Voting System </title>   
 </head>    
 <body>
@@ -32,7 +32,7 @@
     <!-- Login Form -->
     <form>  
         <div class="Acontainer">
-            <img src="../img/student.png" alt="Logo" title="Logo" width="138">
+            <img src="./img/student.png" alt="Logo" title="Logo" width="138">
             <h1>SIGN IN AS</h1>
                 <div class="Aselect">
                     <select name="formal" onchange="javascript:handleSelect(this)">
