--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="Aselect">
                     <select name="formal" onchange="javascript:handleSelect(this)">
                         <option value="StudentLogin">STUDENT</option>
-                        <option value="AdminLogin">ADMINISTRATOR</option>
+                        <option value="./html/AdminLogin">ADMINISTRATOR</option>
                     </select>
                 </div>
             <input type="text" placeholder="Enter BU Email" name="username" required>  
