Changed option value for both student and admin

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h1>SIGN IN AS</h1>
                 <div class="Aselect">
                     <select name="formal" onchange="javascript:handleSelect(this)">
-                        <option value="StudentLogin">STUDENT</option>
+                        <option value="../StudentLogin">STUDENT</option>
                         <option value="./html/AdminLogin">ADMINISTRATOR</option>
                     </select>
                 </div>
