Changed option values for link path

--- a/html/AdminLogin.html
+++ b/html/AdminLogin.html
@@ -36,7 +36,7 @@
                 <div class="Aselect">
                     <select name="formal" onchange="javascript:handleSelect(this)">
                         <option value="AdminLogin">ADMINISTRATOR</option>
-                        <option value="StudentLogin">STUDENT</option>
+                        <option value="../index">STUDENT</option>
                     </select>
                 </div>
             <input type="text" placeholder="Enter BU Email" name="username" required>  
