Replaced Login files with updated version + PHP

--- a/html/AdminLogin.html
+++ b/html/AdminLogin.html
@@ -8,7 +8,6 @@
 <title> BUCEILS Voting System </title>   
 </head>    
 <body>
-    <!-- Login Banner -->
         <div class="Awelcome-banner">
         <h2>ONLINE</h2>
         <div class="Alogo-container">
@@ -25,10 +24,8 @@
             <img class="Arlogo" src="../img/BU logo.png">
             <img class="Arlogo" src="../img/BUHS LOGO.png">
             <img class="Arlogo" src="../img/SSG LOGO.png">
-        </div>
-    <!-- end Login Banner --> 
+        </div> 
 
-    <!-- Login Form -->
     <form>  
         <div class="Acontainer">
             <img src="../img/admin.png" alt="Logo" title="Logo" width="138">
@@ -36,7 +33,7 @@
                 <div class="Aselect">
                     <select name="formal" onchange="javascript:handleSelect(this)">
                         <option value="AdminLogin">ADMINISTRATOR</option>
-                        <option value="../index">STUDENT</option>
+                        <option value="StudentLogin">STUDENT</option>
                     </select>
                 </div>
             <input type="text" placeholder="Enter BU Email" name="username" required>  
@@ -44,6 +41,5 @@
             <button type="submit">LOG IN</button>   
         </div>   
     </form> 
-    <!-- end Login Form -->
 </body>     
 </html>  
