--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
 <html>   
 <head>  
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="text/javascript" src="./js/loginLink.js"></script>
-<link rel="stylesheet" type="text/css" href="./css/style.css">
-<link rel="icon" href="./img/BUHS LOGO.png" type="image/png">  
+<script type="text/javascript" src="../js/loginLink.js"></script>
+<link rel="stylesheet" type="text/css" href="../css/style.css">
+<link rel="icon" href="../img/BUHS LOGO.png" type="image/png">  
 <title> BUCEILS Voting System </title>   
 </head>    
 <body>
-    <!-- Login Banner -->
         <div class="Awelcome-banner">
         <h2>ONLINE</h2>
         <div class="Alogo-container">
-        <img class="Alogos" src="./img/BU logo.png">
-        <img class="Alogos" src="./img/BUHS LOGO.png">
-        <img class="Alogos" src="./img/SSG LOGO.png">
+        <img class="Alogos" src="../img/BU logo.png">
+        <img class="Alogos" src="../img/BUHS LOGO.png">
+        <img class="Alogos" src="../img/SSG LOGO.png">
         </div>
         <h2>VOTING SYSTEM</h2>
         <p>BICOL UNIVERSITY COLLEGE OF EDUCATION<br>INTEGRATED LABORATORY SCHOOL HIGH SCHOOL DEPT.</p>
@@ -22,29 +21,25 @@
 
         <div class="Alogo-banner">
             <p class="Abanner-text">BUCEILS HS ONLINE VOTING SYSTEM</p>
-            <img class="Arlogo" src="./img/BU logo.png">
-            <img class="Arlogo" src="./img/BUHS LOGO.png">
-            <img class="Arlogo" src="./img/SSG LOGO.png">
-        </div>
-    <!-- end Login Banner --> 
+            <img class="Arlogo" src="../img/BU logo.png">
+            <img class="Arlogo" src="../img/BUHS LOGO.png">
+            <img class="Arlogo" src="../img/SSG LOGO.png">
+        </div> 
      
-
-    <!-- Login Form -->
     <form>  
         <div class="Acontainer">
-            <img src="./img/student.png" alt="Logo" title="Logo" width="138">
+            <img src="../img/student.png" alt="Logo" title="Logo" width="138">
             <h1>SIGN IN AS</h1>
                 <div class="Aselect">
                     <select name="formal" onchange="javascript:handleSelect(this)">
-                        <option value="index">STUDENT</option>
-                        <option value="./html/AdminLogin">ADMINISTRATOR</option>
+                        <option value="StudentLogin">STUDENT</option>
+                        <option value="AdminLogin">ADMINISTRATOR</option>
                     </select>
                 </div>
             <input type="text" placeholder="Enter BU Email" name="username" required>  
             <input type="password" placeholder="Enter Password" name="password" required>  
             <button type="submit">LOG IN</button>
         </div>   
-    </form>
-    <!-- end Login Form --> 
+    </form> 
 </body>     
 </html>  
