--- a/html/no_election.html
+++ b/html/no_election.html
@@ -1,9 +1,9 @@
-<div class="Belec2">
+<div class="Belec2 scs-responsive">
     <p><b>There is no</b></p>
 </div>
-<div class="Bon2">
-    <h1><b>ON-GOING ELECTION</b></h1>
+<div class="Bon2 scs-responsive">
+    <h1><b>ONGOING ELECTION</b></h1>
 </div>
-<div class="Bon3">
+<div class="Bon3 scs-responsive">
     <h1><b>Contact the Administrator.</b></h1>
 </div>
