--- a/html/ongoing.html
+++ b/html/ongoing.html
@@ -1,13 +1,10 @@
+<div class="Belec1 scs-responsive">
+    <p><b>The election is</b></p>
+</div>
+<div class="Bon1 scs-responsive">
+    <h1><b>ONGOING</b></h1>
+</div>
 
-<center>
-<img class="Bbg2" src="../img/bg2.png">
-</center>
-<div class="Belec1">
-	<p><b>The election is</b></p>
-</div>
-<div class="Bon1">
-    <h1><b>ON-GOING</b></h1>
-</div>
-<div class="Bres">
+<div class="Bres scs-responsive">
     <p>Results will be out soon.</p>
 </div>
