--- a/user/msg/system.html
+++ b/user/msg/system.html
@@ -16,3 +16,5 @@ TIme Attempted: 02:21:44pm||02:21||2021/05/02||unread##
 TIme Attempted: 02:30:48pm||02:30||2021/05/02||unread##
 1||Warning: A user with invalid credentials attmpted to access the Receipt Page!<br><br>More info about the sender: <br>Student Name: Maria Hanway<br>Grade Level: 7<br>Email: dhanjaphetverastigue.ador@bicol-u.edu.ph<br>Student ID: 1
 TIme Attempted: 02:36:22pm||02:36||2021/05/02||unread##
+1||Warning: An attempt to submit a tampered ballot was made! The user was automatically banned from voting.<br><br>More info about the sender: <br>Student Name: Maurice Madrid<br>Grade Level: 8<br>Email: jonjayvegonzales.llaneta@bicol-u.edu.ph<br>Student ID: 21
+TIme Attempted: 03:27:54pm||03:27||2021/05/03||unread##
