Fixed Typos error messages

--- a/html/error_codes/400.html
+++ b/html/error_codes/400.html
@@ -36,6 +36,6 @@
 			home.onclick = function() {
 				location.href = "../../index.php";
 			}
-        </script>'
+        </script>
 	</body>
 </html>
