--- a/html/error_codes/503.html
+++ b/html/error_codes/503.html
@@ -17,11 +17,11 @@
 				<table style = "width:50%; margin-left: auto; margin-right: auto;">
 					<tr>
 						<th><img src = "../../img/BUHS LOGO.png"></th>
-						<th><br><h2>503</h2><h3>Internal Server Error</h3><br><br></th>
+						<th><br><h2>503</h2><h3>Service Unavailable</h3><br><br></th>
 					</tr>
 				</table>
 					
-					<p>There was an error. Please try again later.</p>
+					<p>Your request is currently unavailable. Please try again later.</p>
 				</div>
 
 				<div id="error-button" class="error-button">
