Minor Fixes + Added Checking of Valid Users in Student Pages

--- a/user/msg/system.html
+++ b/user/msg/system.html
@@ -16,3 +16,4 @@ TIme Attempted: 02:21:44pm||02:21||2021/05/02||unread##
 TIme Attempted: 02:30:48pm||02:30||2021/05/02||unread##
 1||Warning: A user with invalid credentials attmpted to access the Receipt Page!<br><br>More info about the sender: <br>Student Name: Maria Hanway<br>Grade Level: 7<br>Email: dhanjaphetverastigue.ador@bicol-u.edu.ph<br>Student ID: 1
 TIme Attempted: 02:36:22pm||02:36||2021/05/02||unread##
+1||Warning: A user with invalid credentials attempted to access the system<br><br>More info about the sender: <br>Student Name: Jozwa Alex Medina<br>Grade Level: 8<br>Email: joshuaalexinsuya.llander@bicol-u.edu.ph<br>Student ID: 20<br>TIme Attempted: 10:02:02pm||10:02||2021/05/11||unread##
