--- a/html/error_codes/503.html
+++ b/html/error_codes/503.html
@@ -7,7 +7,7 @@
     	<link rel="icon" href="../../img/BUHS LOGO.png" type="image/png">
     	<title>503</title>
 		<link rel="stylesheet" type="text/css" href="../../css/student_css/vote_message.css">
-		<link rel="stylesheet" type="text/css" href="../../css/style_login.css">
+		<link rel="stylesheet" type="text/css" href="../../css/style_Login.css">
 	</head>
 
 	<body>
