--- a/html/spinner.html
+++ b/html/spinner.html
@@ -29,8 +29,6 @@
 			left: 0;
 			-webkit-animation: cubemove 3s infinite ease-in-out;
 			animation: cubemove 3s infinite ease-in-out;
-		}
-		.cube2 {
 			-webkit-animation-delay: -1.5s;
 			animation-delay: -1.5s;
 		}
@@ -63,30 +61,9 @@
     <body> 
 		<div class="spinner">
 			<div class="cube1"></div>
-				<canvas id="a" width="200" height="200">
-					This text is displayed if your browser does not support HTML5 Canvas.
+				<canvas id="a" center width="200" height="200">
 				</canvas>
 			<div class="cube2"></div>
 		</div>
-		<script type="text/javascript">
-			noStroke();
-			background(0,2000,255,99);
-			fill(100,50, 0);
-			rect(0,350,400,100);
-			fill(255,255, 255);
-			stroke(0);
-			ellipse(200, 300, 150, 150);
-			ellipse(200, 200, 100, 100);
-			ellipse(200, 120, 75, 75);
-			line(150,200,100,100);
-			line(250,200,300,100);
-			ellipse(185,110,5,5);
-			ellipse(215,110,5,5);
-			arc(200,130,30,20,0,180);
-			ellipse(200,175,5,5);
-			ellipse(200,195,5,5);
-			ellipse(200,215,5,5);
-			ellipse(200,235,5,5);
-		</script>
 	</body>
 </html>
